# Webscraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_scrape.py
.github/workflows/: python-ci.yml
tests/: test_scraper.py
webscraper/: __init__.py  cli.py  scraper.py
